ELS Code/main/default/objects/Site__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>Property__r.Property_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>