ELS Code/main/default/objects/Site__c/fields/Property_Region__c.field-meta.xml
<CustomField>
    <fullName>Property_Region__c</fullName>
    <formula>Property__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Region</label>
    <type>Text</type>
</CustomField>