ELS Code/main/default/objects/Site__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental?</label>
    <type>Checkbox</type>
</CustomField>