ELS Code/main/default/objects/Site__c/fields/Site_Description__c.field-meta.xml
<CustomField>
    <fullName>Site_Description__c</fullName>
    <label>Site Description</label>
    <type>TextArea</type>
</CustomField>