ELS Code/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site_ID__c</columns>
    <columns>NAME</columns>
    <columns>Site_Description__c</columns>
    <columns>Robot_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/27/2015 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>